// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render internal link 1`] = `
<ForwardRef(Link)
  target="_blank"
  to="/documentation/foo/bar"
/>
`;

exports[`should render links with custom props 1`] = `
<ForwardRef(Link)
  target="_blank"
  to="/documentation/foo/baz"
/>
`;

exports[`should render simple link 1`] = `
<ForwardRef(Link)
  size={12}
  target="_blank"
  to="http://sample.com"
/>
`;
